<resources>
    <string name="app_name">OrgaBuy</string>

    <string name="fragment_title_item_add">Новая запись</string>
    <string name="fragment_title_item_edit">Редактирование</string>
    <string name="fragment_title_item_view">Карточка товара</string>
    <string name="fragment_title_catalog">Каталог</string>
    <string name="fragment_title_shoplist">Список</string>
    <string name="fragment_title_cart">Корзина</string>

    <string name="catalog_is_empty">Каталог пуст</string>
    <string name="cart_is_empty">Корзина пуста</string>
    <string name="shoplist_is_empty">Список покупок пуст</string>
    <string name="item_add_hint_name">Наименование</string>
    <string name="item_add_hint_description">Добавьте комментарий (необязательно)</string>
    <string name="item_add_name_helper_text">*Обязательно для заполнения</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_catalog_search">Найти</string>
    <string name="menu_shoplist_cleanup">Очистить список</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_delete">Удалить</string>

</resources>